# aipaygen

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  REDDIT_LAUNCH.md  SHOW_HN.md  SUBMISSIONS.md  accounts.py  agent_identity.py  agent_memory.py  agent_network.py  aipaygent.service.new  api_catalog.py  api_discovery.py  api_keys.py  apify_client.py  app.py  app.py.bak  async_jobs.py  auto-discover-tools.sh  auto-sweep.sh  auto-update.sh  batch_skills.py  credential_vault.py  crypto_deposits.py  crypto_poller.py  crypto_verify.py  crypto_wallet.py  discovery_engine.py  discovery_scouts.py  eas_reputation.py  email_service.py  file_storage.py  funnel_tracker.py  glama.json  gunicorn.conf.py  helpers.py  langchain_tool.py  (+25 more)
docs/plans/: 2026-03-01-web-intelligence-implementation.md  2026-03-01-web-intelligence-redesign.md  2026-03-02-base-batches-application.md  2026-03-03-agent-saturation-sprint-design.md  2026-03-03-discovery-scouts-design.md  2026-03-03-full-stack-agent-platform-design.md  2026-03-03-full-stack-agent-platform-plan.md  2026-03-03-skill-harvester-design.md  2026-03-04-platform-redesign-design.md  2026-03-04-platform-redesign-plan.md  2026-03-04-security-tfidf-discover-design.md  2026-03-04-security-tfidf-discover-plan.md  2026-03-04-smart-router-react-agent-design.md  2026-03-04-smart-router-react-agent.md  2026-03-07-agent-builder-design.md  2026-03-09-platform-acceleration-design.md  2026-03-09-platform-acceleration-plan.md  2026-03-10-crypto-micropayments-design.md  2026-03-10-crypto-micropayments-plan.md  2026-03-10-model-router-v2-design.md  2026-03-10-model-router-v2-plan.md  2026-03-10-seller-marketplace-design.md
examples/: README.md  demo_paying_agent.ipynb  demo_paying_agent.py
examples/aipaygen-agent-cli/: setup.py
examples/aipaygen-agent-cli/aipaygen_agent/: __init__.py  cli.py
routes/: __init__.py  accounts.py  admin.py  agent.py  ai_tools.py  auth.py  builder.py  crypto.py  data.py  discovery.py  marketplace.py  meta.py  network.py  seller.py  sessions.py  skills.py  streaming.py  utility.py  workflow.py
sdk/: README.md  pyproject.toml  setup.py
sdk/aipaygen_sdk/: __init__.py  async_client.py  auth.py  client.py  exceptions.py  types.py
sdk/js/: index.js  package.json
sdk/python/: aipaygent_langchain.py  aipaygent_llamaindex.py  setup_langchain.py  setup_llamaindex.py
sdk/python/aipaygen-buyer/: README.md  pyproject.toml
sdk/python/aipaygen-buyer/aipaygen_buyer/: __init__.py  client.py  models.py  policy.py  x402.py
sdk/python/aipaygent-mcp/: README.md  pyproject.toml  server.json
sdk/python/aipaygent-mcp/aipaygen_mcp/: __init__.py  server.py
sdk/python/aipaygent-mcp/aipaygent_mcp/: __init__.py  server.py
sdk/python/build-langchain/: aipaygent_langchain.py  setup.py
sdk/python/build-llamaindex/: aipaygent_llamaindex.py  setup.py
sdk/tests/: test_async_client.py  test_client.py
static/css/: main.css
templates/: admin_blog.html  admin_blog_post.html  admin_changelog.html  admin_funnel.html  admin_login.html  base.html  builder.html  buy_credits.html  buy_credits_success.html  crypto_landing.html  discover.html  docs.html  index.html  key_recovery.html  landing.html  login.html  seller.html  try.html
tests/: test_accounts.py  test_admin_routes.py  test_agent_identity.py  test_agent_integration.py  test_agent_network.py  test_api_keys.py  test_auth_routes.py  test_builder_routes.py  test_crypto_deposits.py  test_crypto_poller.py  test_crypto_routes.py  test_crypto_verify.py  test_crypto_wallet.py  test_data_routes.py  test_discover.py  test_discovery_api.py  test_discovery_scouts.py  test_eas_reputation.py  test_email.py  test_feedback_loop.py  test_file_webhook_routes.py  test_helpers.py  test_memory_routes.py  test_meta_routes.py  test_metered_pricing.py  test_model_router.py  test_models_endpoint.py  test_network_routes.py  test_openapi.py  test_pricing.py  test_react_agent.py  test_routes.py  test_seller_marketplace.py  test_session_routes.py  test_sessions.py  test_skills_routes.py  test_utility.py  test_v2_integration.py  test_web.py  test_webhook_dispatch.py  (+1 more)
