[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aipaygen-mcp"
version = "1.0.1"
description = "MCP server for AiPayGen — 155 AI tools across 5 pricing tiers via the x402 payment protocol"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Damien" }]
keywords = ["mcp", "claude", "ai", "x402", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://aipaygen.com"
API = "https://api.aipaygen.com"
MCP = "https://mcp.aipaygen.com/mcp"

[project.scripts]
aipaygen-mcp = "mcp_server:main"

[tool.hatch.build.targets.wheel]
only-include = ["mcp_server.py"]

[tool.hatch.build.targets.sdist]
only-include = ["mcp_server.py", "README.md", "pyproject.toml"]
