[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipaygen-sdk"
version = "0.1.0"
description = "Python SDK for AiPayGen APIs with automatic x402 payment handling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "AiPayGen", email = "hello@aipaygen.com"}]
keywords = [
    "aipaygen", "x402", "micropayments", "usdc", "api-client",
    "ai", "agent", "sdk", "pay-per-call",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
crypto = ["eth-account>=0.10.0", "eth-abi>=5.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://aipaygen.com"
Documentation = "https://api.aipaygen.com/docs"
Repository = "https://github.com/Damien829/aipaygen"

[tool.setuptools.packages.find]
include = ["aipaygen_sdk*"]
