[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipaygen-mcp"
version = "1.4.4"
description = "88 AI tools for Claude, Cursor, and any MCP-compatible agent — research, write, code, scrape, translate, agent network, API catalog, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AiPayGen", email = "hello@aipaygen.com"}]
keywords = [
    "mcp", "claude", "ai", "tools", "agent", "llm",
    "research", "scraping", "translation", "code-generation",
    "model-context-protocol", "cursor", "windsurf", "anthropic",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://aipaygen.com"
Documentation = "https://api.aipaygen.com/discover"
Repository = "https://github.com/Damien829/aipaygen"
Issues = "https://github.com/Damien829/aipaygen/issues"

[project.scripts]
aipaygen-mcp = "aipaygen_mcp.server:main"
